--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-red-contrib-sap-hana",
-  "version": "1.2.4",
+  "version": "1.2.4-fix.e362ftas",
   "description": "Node-RED node to access SAP HANA database",
   "dependencies": {
     "@sap/hana-client": "latest",
